if(UNIX)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
endif()
PROJECT(ALIDOMAIN)
OPTION(DEBUG "Debug Module !" ON)
if(DEBUG)
SET(CMAKE_BUILD_TYPE "Debug")
endif()

if(UNIX)
SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++11)
endif()
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib)
AUX_SOURCE_DIRECTORY(src SRC_LIST)
SOURCE_GROUP("src" FILES ${SRC_LIST})
ADD_SUBDIRECTORY(src)
ADD_EXECUTABLE(AliDomain ${SRC_LIST})
SET(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR})
if(UNIX)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/libcurl.so ${CMAKE_SOURCE_DIR}/lib/libmysqlcppconn.so
DESTINATION bin)
else()
		INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/libcurl.dll ${CMAKE_SOURCE_DIR}/lib/mysqlcppconn.dll
		DESTINATION bin)
endif()
INSTALL(FILES ${CMAKE_SOURCE_DIR}/config/setting.ini
		DESTINATION bin/config)


SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
if(UNIX)
TARGET_LINK_LIBRARIES(AliDomain -lmysqlcppconn -lcurl)
else()
TARGET_LINK_LIBRARIES(AliDomain libcurl.dll mysqlcppconn.dll)
endif()

